# copilot-evaluation-harness

./: .gitignore  3324c2af-cdb4-4a7a-b7e3-801c2c72a39fsetup_venv_on_repo.sh  CES_generated  README.md  doc_end_to_end.py  end_to_end_script.py  evaluation_results.json  fix_end_to_end.py  pyproject.toml  requirements.txt  test_gen_end_to_end.py  test_metrics.py  tmp_script_for_fix  update_code_snippet.py
data/demo_json/: case-0.json
data/doc/: case-1000.json  case-1001.json  case-1002.json  case-1003.json  case-1006.json  case-1007.json  case-1008.json  case-1010.json  case-1011.json  case-1012.json  case-1013.json  case-1016.json  case-1018.json  case-1019.json  case-1020.json  case-1021.json  case-1022.json  case-1024.json  case-1027.json  case-1028.json  case-103.json  case-1030.json  case-1031.json  case-1032.json  case-1033.json  case-1034.json  case-1035.json  case-1038.json  case-1039.json  case-104.json  case-1041.json  case-1043.json  case-1045.json  (+4296 more)
data_scripts/: add_commit_from_buildable_repo_urls  new_test_gen_tests.py  results_score.py  update_commit_sha.py  update_line_range.py
score_scripts/: abs_conversation.py  abs_sim_requests.py  abs_state.py  base_evaluator.py  doc_score.py  fix_score.py  fix_script.py  language_suffix.py  method_gen_score.py  model_handler.py  os_helper.py  static_analysis_tools.py  syntax_parser.py  test_gen_eval.py  test_score.py  test_script.py  timeout.py  tsc_diagnostic_messages.py  workspace_score.py
tests/: doc_tests.py  fix_tests.py  model_input_tests.py  test_gen_tests.py  test_helper_functions.py  test_metrics.py
(+14976 files in other folders)
