[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Copilot-Evaluation-Harness"
version = "0.1.0"
authors = [{name = "Microsoft"}]
description = "Dataset and Evaluation Metrics for the Copilot Evaluation Harness Paper."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click",
    "pandas", 
    "python-dotenv",
    "sarif-tools",
    "anthropic"
]
